# AutoSwarm

./: .gitignore  Cargo.toml  CollisionAvoidance.drawio  InitialDesign.drawio  LICENSE  NodeStateMachine.drawio  README.md  paper_notes.txt  todo.md  vis.py  viva.pptx
astro/: Cargo.toml
astro/src/: astro.rs  astroconf.rs  comm.rs  control.rs  gps.rs  groupstate.rs  kinetics.rs  lib.rs  main.rs  neighbourhood.rs  transceiver.rs  util.rs
astro/src/control/: collivoid.rs  conn.rs  contacts.rs  group.rs  msg.rs  nm.rs  taskalloc.rs  tm.rs  uav.rs
data/: out-20240810-162502  out-line-20240827-125524  out-line-20240827-125524.stdout  out-line-20240828-124825  out-love-20240828-123829
data/050ms-0.10m/: out-line-20240828-215415  out-line-20240828-215415.stdout  out-lttr-20240828-221140  out-lttr-20240828-221140.stdout
data/100ms-0.05m/: out-line-20240828-124825.stdout  out-lttr-20240828-123829.stdout
quantity/: Cargo.toml
quantity/src/: lib.rs
rsc/: astro_sequence.uml  collision_avoidance.drawio  control_sequence.uml  nm_sequence.uml  node_state_machine.drawio  shape_division.drawio  simbed.drawio  software_architecture.drawio  swarm_tree.drawio  task_state_transition.drawio  velocity_control_structure.drawio  virtual_structure_method.drawio
thesis/: 1_aims.tex  2_background.tex  3_problem.tex  4_design.tex  5_impl.tex  6_simulation.tex  7_future.tex  a_1_code.tex  latexmkrc  refs.bib  thesis.tex  uob-thesis.cls
