[package]
name = "astro"
version = "0.1.0"
edition = "2021"
description = "Autonomous Swarm Tasking Routing and Organisation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
zvariant = "4.1.2"
